--- a/index.html
+++ b/index.html
@@ -7,7 +7,37 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="display">00</div>
+        <div class="row1">
+            <button id="7">7</button>
+            <button id="8">8</button>
+            <button id="9">9</button>
+            <button id="addition">+</button>
+        </div>
+
+        <div class="row2">
+            <button id="4">4</button>
+            <button id="5">5</button>
+            <button id="6">6</button>
+            <button id="subtraction">-</button>
+        </div>
+            
+        <div class="row2">
+            <button id="1">1</button>
+            <button id="2">2</button>
+            <button id="3">3</button>
+            <button id="multiple">*</button>
+        </div>
+
+        <div class="row4">
+            <button id="clear">Clear</button>
+            <button id="0">0</button>
+            <button id="equals">=</button>
+            <button id="divide">/</button>
+        </div>
+
+    </div>
 
 
     <script src="script.js"></script>
