added the button functionality for the numbers and the operators and the calculate function to the equal button and displayed it to the screen

--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
     <div class="container">
         <div class="display">00</div>
         <div class="row1">
-            <button id="7">7</button>
-            <button id="8">8</button>
-            <button id="9">9</button>
-            <button id="addition">+</button>
+            <button class="nums" id="7">7</button>
+            <button class="nums" id="8">8</button>
+            <button class="nums" id="9">9</button>
+            <button class="operator">+</button>
         </div>
 
         <div class="row2">
-            <button id="4">4</button>
-            <button id="5">5</button>
-            <button id="6">6</button>
-            <button id="subtraction">-</button>
+            <button class="nums" id="4">4</button>
+            <button class="nums" id="5">5</button>
+            <button class="nums" id="6">6</button>
+            <button class="operator">-</button>
         </div>
             
         <div class="row2">
-            <button id="1">1</button>
-            <button id="2">2</button>
-            <button id="3">3</button>
-            <button id="multiple">*</button>
+            <button class="nums" id="1">1</button>
+            <button class="nums" id="2">2</button>
+            <button class="nums" id="3">3</button>
+            <button class="operator">*</button>
         </div>
 
         <div class="row4">
             <button id="clear">Clear</button>
-            <button id="0">0</button>
+            <button class="nums" id="0">0</button>
             <button id="equals">=</button>
-            <button id="divide">/</button>
+            <button class="operator">/</button>
         </div>
 
     </div>
